tests/ui/on-unimplemented/slice-index.stderr
error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> $DIR/slice-index.rs:8:7
   |
LL |     x[1i32];
   |       ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
   = help: the trait `SliceIndex<[T]>` is implemented for `usize`
   = note: required for `[i32]` to implement `Index<i32>`

error[E0277]: the type `[i32]` cannot be indexed by `RangeTo<i32>`
  --> $DIR/slice-index.rs:9:7
   |
LL |     x[..1i32];
   |       ^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `RangeTo<i32>`
   = help: the following other types implement trait `SliceIndex<T>`:
             <RangeTo<usize> as SliceIndex<str>>
             <RangeTo<usize> as SliceIndex<[T]>>
   = note: required for `[i32]` to implement `Index<RangeTo<i32>>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
